# EncryptionMan

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/witcher/encryptionman/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/witcher/encryptionman/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/witcher/encryptionman/: ExampleUnitTest.java
encryptionmanlib/: CMakeLists.txt  build.gradle
encryptionmanlib/src/androidTest/java/com/witcher/encryptionmanlib/: ExampleInstrumentedTest.java
encryptionmanlib/src/main/: AndroidManifest.xml
encryptionmanlib/src/main/cpp/: aes.cpp  aes.h  aes_encryptor.cpp  aes_encryptor.h  base64.cpp  base64.h  encryption_man.cpp  md5.cpp  md5.h  rsa.cpp  rsa.h
encryptionmanlib/src/main/java/com/witcher/encryptionmanlib/: AesEncryption.java  Base64Encryption.java  EncryptionManager.java  EncryptionManagerByJava.java  L.java  MD5Encryption.java  RsaEncryption.java
encryptionmanlib/src/main/res/values/: strings.xml
encryptionmanlib/src/test/java/com/witcher/encryptionmanlib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
